Bug 256269 Caret browsing: up/down arrow should not get into button text r=mats.palmgren sr=roc